--- a/ToolKit/src/YPubliclibs/YPubliclibs.dproj
+++ b/ToolKit/src/YPubliclibs/YPubliclibs.dproj
@@ -99,6 +99,7 @@
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <Manifest_File>(None)</Manifest_File>
+        <Debugger_HostApplication>..\..\debug\ToolKit.exe</Debugger_HostApplication>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
