--- a/Test/Project1.dproj
+++ b/Test/Project1.dproj
@@ -104,6 +104,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="..\ToolKit\src\Main\unit\uDragOnRunTime.pas"/>
+        <DCCReference Include="Unit3.pas">
+            <Form>Form3</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
