--- a/InterfaceObject/Server/bin/DIOCPTcpServer.ini
+++ b/InterfaceObject/Server/bin/DIOCPTcpServer.ini
@@ -16,3 +16,8 @@ DataBase = tslab_test
 User_Name = sa
 Password = Abc123
 Pooled = True
+[DateTime]
+ShortDateFormat = yyyy-mm-dd 
+DateSeparator = -
+LongTimeFormat = hh:nn:ss.z
+TimeSeparator = :
