--- a/InterfaceObject/Server/src/DIOCPTCPServer.dproj
+++ b/InterfaceObject/Server/src/DIOCPTCPServer.dproj
@@ -129,6 +129,8 @@
             <DesignClass>TDataModule</DesignClass>
         </DCCReference>
         <DCCReference Include="lib\uLogAppender.pas"/>
+        <DCCReference Include="IntfModule\uHBTMintf.pas"/>
+        <DCCReference Include="IntfModule\ICalculateService.pas"/>
         <RcItem Include="Server.ico">
             <ResourceType>ICON</ResourceType>
             <ResourceId>Icon_1</ResourceId>
