--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ __recovery/
 
 # Castalia statistics file (since XE7 Castalia is distributed with Delphi)
 *.stat
+server/src/hospitalservices/EwellMqExpts---.pas
+server/debug/tcp_server_log.cdd
