--- a/server/debug/TCPServer.ini
+++ b/server/debug/TCPServer.ini
@@ -13,9 +13,9 @@ User_Name = sa
 Password = 7540000E
 Pooled = True
 [HISDataBase]
-DriverName = MSSQL
-Server = 127.0.0.1
-DataBase = xhlisdb_data
+DriverName = Ora
+Server = 10.86.86.24
+DataBase = BIZ_DMS_TEST
 User_Name = sa
 Password = 7540000E
 Pooled = True
